# PyGit

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
pygit/: __init__.py  cli.py
pygit/commands/: __init__.py  add.py  commit.py  init.py
pygit/core/: __init__.py  index.py  objects.py  repository.py
pygit/utils/: __init__.py  hash.py
tests/: __init__.py
