[project]
name = "pygit"
version = "0.1.0"
description = "A Python implementation of Git for educational purposes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",  # For CLI interface
    "pathlib>=1.0.1",  # For path manipulation
    "hashlib",  # For SHA-1 hashing
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "isort>=5.12.0",
]
